# dawn-nxscope

./: README.md  pyproject.toml  tox.ini
examples/: test.py
src/dawn_nxscope/: __init__.py  plugin.py
tests/: test_plugin.py
